# OTel-app

./: .gitignore  README.md  bazel-bin  bazel-opentelemetry-app  bazel-out  bazel-testlogs
src/: BUILD.bazel  example_ostream.cc
